# country-backend-django

./: pyproject.toml
core/: settings.py  urls.py
home/: admin.py  forms.py  models.py  urls.py  views.py
home/templates/: index.html
